--- a/templates/index.html
+++ b/templates/index.html
@@ -10,8 +10,8 @@
     <div class="container">
         <div id="user-form">
             <h2></h2>
-            <h2>   </h2>
-            <p>Enter your details to start chatting</p>
+            <p>" "</p>
+            <p>Enter your details to start chatting:</p>
             <input type="text" id="name" placeholder="Your Name" required>
             <input type="email" id="email" placeholder="Your Email" required>
             <input type="tel" id="phone" placeholder="Your Phone Number" required>
