--- a/templates/index.html
+++ b/templates/index.html
@@ -10,6 +10,8 @@
     <div class="container">
         <div id="user-form">
             <h2></h2>
+            <div> </div>
+            <div> </div>
             <p>" "</p>
             <p>Enter your details to start chatting:</p>
             <input type="text" id="name" placeholder="Your Name" required>
